# NTCPP

./: .gitignore  .gitmodules  ASSETS.md  CMakeLists.txt  LICENSE.md  README.md  TODO.md
scripts/: conv_textures.py  png_to_qoi.py
src/: CMakeLists.txt  main.cpp
src/core/: animation.cpp  animation.hpp  animation_manager.cpp  animation_manager.hpp  camera.cpp  camera.hpp  obj_interface.cpp  obj_interface.hpp  obj_manager.cpp  obj_manager.hpp  sprite.cpp  sprite.hpp  status.hpp  texture_manager.cpp  texture_manager.hpp  window.cpp  window.hpp
src/core/manager/: animation_manager.cpp  animation_manager.hpp  collision_manager.cpp  collision_manager.hpp  debug_manager.cpp  debug_manager.hpp  input_manager.cpp  input_manager.hpp  obj_manager.cpp  obj_manager.hpp  texture_manager.cpp  texture_manager.hpp
src/math/: circle.hpp  frect.hpp  vec2.hpp
src/objects/hud/cursor/: cursor.cpp  cursor.hpp
src/objects/player/: player.cpp  player.hpp
src/objects/terrain/: terrain.cpp  terrain.hpp
src/objects/terrain/floor/: floor.cpp  floor.hpp
src/objects/terrain/floor_maker/: floor_maker.cpp  floor_maker.hpp
src/objects/terrain/wall/: wall.cpp  wall.hpp
